manifest/base/resources/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  grafana
  labels:
    app: grafana
spec:
  selector:
    app:  grafana
  type:  NodePort
  ports:
  - name:  http-grafana
    port:  3000
    targetPort:  3000
    nodePort: 30081
