manifest/base/resources/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-allow-all
  labels:
    app: grafana
spec:
  podSelector:
    matchLabels:
      app: grafana
  ingress:
  - {}
